# unsegaREBORN

./: CMakeLists.txt  README.md  build.bat  build.sh
.github/workflows/: build-linux-arm64.yml
include/: bootid.h  common.h  crypto.h  exfat.h  ntfs.h
src/: bootid.c  crypto.c  exfat.c  keys.c  main.c  ntfs.c
unsegareborn/: common.h  exfat.c  exfat.h  ntfs.c  ntfs.h
